# halo2-website

./: Cargo.toml  README.md
locales/: core.ftl
locales/en-US/: common.ftl  homepage.ftl
src/: calendar.rs  i18n.rs  main.rs
src/i18n/: loader.rs
static/scripts/: languages.js
templates/: index.html
templates/components/: layout.html
templates/components/panels/: calendar.html
