[package]
name = "halo2-dev"
version = "0.1.0"
authors = [
    "Jack Grigg <jack@electriccoin.co>",
]
edition = "2021"

[dependencies]
# Webserver
axum = "0.4"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.2", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }

# Templates
askama = { version = "0.11", features = ["with-axum"] }
askama_axum = "0.1"

# i18n
fluent-bundle = "0.15"
fluent-langneg = "0.13"
intl-memoizer = "0.5"
lazy_static = "1.2"
unic-langid = { version = "0.9", features = ["macros", "serde"] }

# Page features
time = "0.3"

[dev-dependencies]
tempfile = "3.1"
